--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <form action="" method="post">
+    <form action="/submitted" method="post enctype="multipart/form-data">
 <input type="file" name="images"> 
 
 
